fixed sidebar overflow and download icon size

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .width-acc-to-sidebar {
+      width: calc(100vw - 200px);
+    }
+  }
